--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,12 @@
   padding: 20px;
 }
 
+.form-fields {
+  width: 40%;
+}
+
 .button-submit {
-  background-color: #4CAF50;
+  background-color: black;
   color: white;
   padding: 14px 20px;
   margin: 8px 10px;
@@ -58,7 +62,7 @@
 }
 
 .button-cancel {
-  background-color: #b63333;
+  background-color: red;
   color: white;
   padding: 14px 20px;
   margin: 8px 10px;
@@ -68,9 +72,9 @@
 }
 
 input[type=text], input[type=date], select {
-  border: 1px solid #ccc;
+  border: 1px solid lightgray;
   width: 100%;
-  padding: 12px 20px;
+  padding: 8px 10px;
   margin: 8px 0;
   display: inline-block;
   border-radius: 4px;
@@ -78,19 +82,24 @@ input[type=text], input[type=date], select {
 }
 
 input[type=number] {
-  border: 1px solid #ccc;
-  padding: 12px 20px;
+  border: 1px solid lightgray;
+  padding: 8px 10px;
   margin: 8px 0;
   display: inline-block;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
-textarea {
-  border: 1px solid #ccc;
+.form-input-salary {
   width: 100%;
-  height: 4rem;
-  padding: 12px 20px;
+  border: 1px solid black;
+}
+
+textarea {
+  border: 1px solid lightgray;
+  width: 100%;
+  height: 6rem;
+  padding: 8px 10px;
   margin: 8px 0;
   display: inline-block;
   border-radius: 4px;
